- Fixed alignment for Social Links in sidebar - Added some Emojis

--- a/src/components/Links/style.scss
+++ b/src/components/Links/style.scss
@@ -3,6 +3,10 @@
 
 .links {
     @include margin-bottom(1);
+    display: inline-block;
+    ul:first-of-type {
+        margin-top: 0;
+    }
     &__list {
         display: flex;
         list-style: none;
